fix: align sidebar icons with close/collapse icon in header

--- a/libraries/ui-library/src/components/six-sidebar/six-sidebar.scss
+++ b/libraries/ui-library/src/components/six-sidebar/six-sidebar.scss
@@ -15,6 +15,7 @@
 
     &.sidebar--open {
       box-shadow: var(--six-elevation-1dp);
+      padding: 0 var(--six-spacing-small);
     }
 
     &:not(.sidebar--visible) {
